--- a/.github/workflows/basic.yml
+++ b/.github/workflows/basic.yml
@@ -5,12 +5,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Basic Information
-        run:  |
+        run: |
           echo "🎬 The job was automatically triggered by a ${{ github.event_name }} event."
           echo "💻 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
           echo "🎋 Workflow is running on the branch ${{ github.ref }}"
       - name: Checking out the repository
-        users: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: Information after checking out
         run: |
           echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
