--- a/.dvc/config
+++ b/.dvc/config
@@ -2,3 +2,5 @@
     remote = storage
 ['remote "storage"']
     url = gdrive://1O-6JApTdpJKF3tIYtfl8uV4Huh1QwuG-
+    gdrive_use_service_account = true
+    gdrive_service_account_json_file_path = ../creds.json
